# vibe-tree-rs

./: .gitignore  CLAUDE.md  Cargo.toml
crates/vt-app/: Cargo.toml
crates/vt-app/src/: app.rs  event.rs  gpu.rs  main.rs
crates/vt-core/: Cargo.toml
crates/vt-core/src/: config.rs  types.rs
crates/vt-embed/: Cargo.toml
crates/vt-embed/src/: lib.rs  x11.rs
crates/vt-git/: Cargo.toml
crates/vt-git/src/: commands.rs  lib.rs  parser.rs
crates/vt-pty/: Cargo.toml
crates/vt-pty/src/: lib.rs  manager.rs  session.rs
crates/vt-terminal/: Cargo.toml
crates/vt-terminal/src/: instance.rs  lib.rs  renderer.rs
crates/vt-ui/: Cargo.toml
crates/vt-ui/src/: lib.rs  portal_panel.rs  terminal_grid.rs  theme.rs  worktree_panel.rs
