[package]
name = "vt-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
vt-core = { path = "../vt-core" }
vt-pty = { path = "../vt-pty" }
alacritty_terminal = { workspace = true }
glyphon = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1"
